# signer_autofill

./: .gitignore  README.md  pyproject.toml  supply_signers.py
config/: settings.example.json
settings/: config.py
utils/: callback_helpers.py  default_logger.py  exceptions.py  helper_functions.py  rpc.py  transaction_utils.py
utils/models/: data_models.py  settings_model.py
utils/redis/: redis_conn.py
